:bug: Fix group looks blurry when setting transparency

--- a/frontend/resources/styles/main/partials/texts.scss
+++ b/frontend/resources/styles/main/partials/texts.scss
@@ -57,3 +57,7 @@
     justify-content: flex-end;
   }
 }
+
+.text-shape {
+  visibility: hidden;
+}
